# comiccatcher

./: .gitignore  DESIGN.md  README.md  TESTING.md  TODO.md  config.py  llms.txt  logger.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
api/: client.py  download_manager.py  feed_reconciler.py  image_manager.py  library_scanner.py  local_db.py  opds_v2.py  progression.py
docs/: DESIGN.md  TESTING.md
models/: feed.py  feed_page.py  opds.py  server.py
packaging/: build.py  build_appimage.sh  comiccatcher.desktop  hook-comicbox.py  installer.wxs  update_apt_repo.py
scripts/: capture_themes.py  check_pyqt_deps.py  crawl_opds.py  debug_opds_content.py  diag_viewport.py  e2e_capture_client_errors.py  e2e_drive_viewport.py  e2e_gui_perf.py  e2e_playwright_smoke.py  e2e_repro_local_reader_web.py  e2e_select_mode_download.py  exercise_themes.py  fix_grid_view.py  inspect_feed_details.py  proto_dashboard.py  quick_launch_test.py  repro_scrub_stall.py  smoke_test.sh  test_feed_heuristic.py  test_flet_image_viewer.py  test_paging_math.py  validate_integrity.py
src/: pdffile.py
tests/: final_scroll_verification.py  repro_ghost_cards.py  repro_scrolled_last_page.py  test_config_library_dir.py  test_download_filename.py  test_feed_browser_logic.py  test_gui_pagination.py  test_ids.py  test_issues_scroll.py  test_library_labels.py  test_library_view.py  test_local_archive_cbz.py  test_local_comicbox_flatten.py  test_navigation_click.py  test_opds_auth_discovery.py  test_reader_integration_manifest.py  (+9 more)
(+170 files in other folders)
